--- a/redmi_ac2100.config
+++ b/redmi_ac2100.config
@@ -72,9 +72,9 @@ CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-# CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
@@ -91,14 +91,14 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_terminfo=y
-# CONFIG_PACKAGE_trojan=y
-# CONFIG_PACKAGE_v2ray=y
-# CONFIG_PACKAGE_v2ray-plugin=y
-# CONFIG_V2RAY_COMPRESS_UPX=y
-# CONFIG_V2RAY_DISABLE_NONE=y
-# CONFIG_V2RAY_EXCLUDE_ASSETS=y
-# CONFIG_V2RAY_EXCLUDE_V2CTL=y
-# CONFIG_V2RAY_JSON_INTERNAL=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_v2ray-plugin=y
+CONFIG_V2RAY_COMPRESS_UPX=y
+CONFIG_V2RAY_DISABLE_NONE=y
+CONFIG_V2RAY_EXCLUDE_ASSETS=y
+CONFIG_V2RAY_EXCLUDE_V2CTL=y
+CONFIG_V2RAY_JSON_INTERNAL=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
